                     CHANGES version 5.23.0

           This file summarizes changes made since 5.0

Version 5.23.0

New: Issue #594: Systemd template for Monit: Added documentation reference.

Fixed: Issue #601: The Monit web interface highlighted non-SSL TCP port tests
with red, even though there was no error.

Fixed: Issue #602: Linux: When checking root filesystem via a mountpoint "/",
Monit may alert that the filesystem flags changed if the system has "rootfs"
overlay mount.

Fixed: Issue #603: Support existence/nonexistence test for filesystem check.

Fixed: Issue #614: Monit may crash if "total memory" test is used in "check system"
context. The "total memory" test is for process checks only (includes children
memory total) and will produce syntax error if used in system check now.

Fixed: The "check program" may timeout if the executed program produces lot of output.
Thanks to Artur Molchanov for patch.

Fixed: *BSD: If device parsing for UFS filesystem failed, skip the I/O monitoring
only and continue monitoring the space/inode usage.  Thanks to Daniel Bilik for patch.

Fixed: Keep the action-pending status until the action is finished.


Version 5.22.0

New: Linux: Added support for monitoring ZFS disk activity.

New: Issue #500: Added the "method" option for http protocol test, to allow overriding
the HTTP method used for the test (by default HEAD unless content or checksum test is set,
in which case GET is used automatically). Only HEAD and GET methods are supported currently.
Example:
    if failed port 443 protocol https method GET then alert

New: Issue #582: File, Directory, Fifo checks: Added support for explicit access, change
and modification time tests. If the type is not specified, the original timestamp test is
performed, which checks the latest of change and modification timestamps. It is also
possible to use "newer" and "later" operators in the test now. Syntax: